# kvns

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
.github/workflows/: release.yml
benches/: hotpath.rs
scripts/: benchmark_kvns.sh  benchmark_kvns_vs_dragonfly.sh
src/: commands.rs  config.rs  main.rs  persist.rs  pubsub.rs  resp.rs  server.rs  sharded.rs  store.rs  uring_server.rs
