[package]
name = "kvns"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
