[package]
name = "kvns"
version = "0.5.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
serde = { version = "1", features = ["derive"] }
rkyv = { version = "0.8", features = ["std"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
