[package]
name = "kvns"
version = "0.7.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "time", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }
serde = { version = "1", features = ["derive"] }
rkyv = { version = "0.8", features = ["std"] }
parking_lot = "0.12"
smallvec = { version = "1", features = ["union"] }
ahash = "0.8"
itoa = "1"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = "0.5"
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hotpath"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
